--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Your awesome title
-author:
+title: Gebutcher
+author: GE
   name: GitHub User
   email: your-email@domain.com
 description: > # this means to ignore newlines until "show_excerpts:"
