--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Your awesome title
+title: Gebutcher
 author:
-  name: GitHub User
+  name: Gebutcher
   email: your-email@domain.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
