--- a/_config.yml
+++ b/_config.yml
@@ -41,10 +41,10 @@ social_links:
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #   - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
   #   - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
-- { platform: telegram,       user_url: "https://t.me/jekyll" }
-- { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
+- { platform: telegram,       user_url: "https://t.me/gebutcher" }
+- { platform: twitter,        user_url: "https://twitter.com/gebutcher" }
   #   - { platform: x,              user_url: "https://x.com/jekyllrb" }
-- { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
+- { platform: youtube,        user_url: "https://www.youtube.com/@Gebutcher" }
 
 # If you want to link only specific pages in your header, uncomment this and add the path to the pages in
 # order as they should show up.
