--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: "Blog Title"
-author: "Blog Author"
+title: "Gebutcher"
+author: "Gebutcher"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
-lang: "en"
+lang: "ru"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
 
