--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Gebutcher"
 author: "Gebutcher"
-description: "Расскажу о разнообразных telegram ботах для поиска информации. Эти боты для деанона и OSINT, помогают вам пробивать человеке по номерам телефонов, номерам автомобилей, адресам, электронным ящикам почты и находить ценную информацию в интернете."
+description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "ru"
 excerpt_separator: "\n\n\n"
