--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Gebutcher"
 author: "Gebutcher"
-description: " Copyright <b style=\"color: #f45;\">&lt;3</b> "
+description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "ru"
 excerpt_separator: "\n\n\n"
