--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "ru"
 excerpt_separator: "\n\n\n"
-date_format: "%d-%m-%Y"
+date_format: "%Y-%m-%d"
 
 # Layout
 
