--- a/_config.yml
+++ b/_config.yml
@@ -28,5 +28,7 @@ comments:
 #  disqus_shortname: ""    # see https://disqus.com/
 #  isso_domain: ""         # see https://posativ.org/isso/
 
-#  plugins:
-#   - jekyll-feed
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
